# valm-unified_phase1

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  sha256_pyproject.txt  sha256_src_valm.txt
configs/: default.yaml  unified.yaml  unified.yaml.bak
examples/: basic_usage.py
requirements/: core.txt
runs/: integrated_run_witness.json  six_systems_witness.json  unified_load_witness.json
scripts/: benchmark.py  chat.py  describe_tests.py  integrated_run_witness.py  probe_repo.py  report_loaded.py  run_integrated.py  run_unified.py  setup.sh  six_systems_witness.py  unified_witness.py
src/valm/: __init__.py
src/valm/chat/: runtime.py
src/valm/core/: __init__.py  config.py  events.py  interface.py  kv_projector.py  memory.py  registry.py  types.py
src/valm/fixtures/: toy_next_token.py
src/valm/integrated/: run.py
src/valm/integration/: coordinator.py  importer.py
src/valm/memory/: __init__.py  base.py  kv_memory.py  param_memory.py
src/valm/systems/: adapters.py
src/valm/unified/: adapters_witness.py  integrated.py  six_systems_witness.py  six_systems_witness.py.bak  six_systems_witness.py.bak.1768208766  system.py  witness.py
src/valm/utils/: hashing.py  serialization.py
tests/: conftest.py  test_adapters_smoke.py  test_integrated_run_witness_adaptation_action.py  test_integrated_run_witness_smoke.py  test_six_systems_witness.py  test_unified_witness_smoke.py
tests/test_core/: test_config.py  test_interface.py  test_registry.py
tests/test_integration/: test_coordinator_load.py
tests/test_unified/: test_system.py
(+4 files in other folders)
